# hootenanny

./: .cargo-watch.toml  .gitignore  ARCHITECTURE.md  Cargo.toml  GEMINI.md  README.md  TODO.md  fanfare-2025-11-25.md  justfile  mcp-docs  mcp-schema
crates/audio-graph-mcp/: Cargo.toml  README.md
crates/audio-graph-mcp/src/: adapter.rs  db.rs  lib.rs  matcher.rs  schema.graphql  sources.rs  tools.rs  types.rs
crates/audio-graph-mcp/src/sources/: alsa.rs  artifact.rs  pipewire.rs
crates/audio-graph-mcp/tests/: integration_tests.rs
crates/audio-graph-mcp/tests/fixtures/: mod.rs
crates/baton/: Cargo.toml
crates/baton/src/: lib.rs  schema_helpers.rs
crates/baton/src/client/: mod.rs  sse.rs  streamable.rs
crates/baton/src/protocol/: mod.rs
crates/baton/src/session/: mod.rs  store.rs
crates/baton/src/transport/: logger.rs  message.rs  mod.rs  notifier.rs  sampling.rs  sse.rs  streamable.rs
crates/baton/src/types/: completion.rs  content.rs  elicitation.rs  error.rs  jsonrpc.rs  logging.rs  mod.rs  progress.rs  prompt.rs  protocol.rs  resource.rs  sampling.rs  subscription.rs  tool.rs
crates/cas/: Cargo.toml
crates/cas/src/: config.rs  hash.rs  lib.rs  metadata.rs  staging.rs  store.rs
crates/chaosgarden/: Cargo.toml
crates/chaosgarden/examples/: pipewire_tone.rs
crates/chaosgarden/src/: capabilities.rs  daemon.rs  external_io.rs  graph.rs  ipc.rs  latent.rs  lib.rs  midi_file.rs  midi_io.rs  mixer.rs  monitor_input.rs  patterns.rs  pipewire_input.rs  pipewire_output.rs  playback.rs  primitives.rs  query.rs  rave_streaming.rs  schema.graphql  stream_io.rs  tick_clock.rs
crates/chaosgarden/src/ipc/: capnp_server.rs  client.rs  messages.rs  server.rs  wire.rs
crates/chaosgarden/src/nodes/: audio_file.rs  mod.rs
crates/chaosgarden/src/primitives/: region.rs
crates/chaosgarden/tests/: ipc_roundtrip.rs
crates/holler/: Cargo.toml
crates/holler/src/: backend.rs  client.rs  commands.rs  dispatch.rs  handler.rs  heartbeat.rs  help.rs  lib.rs  main.rs  manual_schemas.rs  mcp.rs  prompts.rs  resources.rs  serve.rs  sse.rs  stdio.rs  subscriber.rs  telemetry.rs  tls.rs  tools_registry.rs
crates/holler/tests/: backend_integration.rs  mcp_gateway.rs  stdio_transport.rs  subscriber.rs  tool_refresh.rs  zmq_roundtrip.rs
crates/hooteconf/: Cargo.toml
crates/hooteconf/src/: bootstrap.rs  infra.rs  lib.rs  loader.rs
crates/hootenanny/: Cargo.toml  build.rs
crates/hootenanny/examples/: two_agent_jam.rs
crates/hootenanny/src/: artifact_store.rs  capnp_events.rs  cas.rs  conversation.rs  domain.rs  event.capnp  event_buffer.rs  gpu_monitor.rs  job_system.rs  lib.rs  main.rs  persistence.rs  pipewire.rs  realization.rs  server.rs  telemetry.rs  types.rs  web.rs
crates/hootenanny/src/api/: composite.rs  dispatch.rs  dispatcher.rs  garden_adapter.rs  handler.rs  manual_schemas.rs  mod.rs  responses.rs  schema.rs  service.rs  service_typed.rs  tools_registry.rs  typed_dispatch.rs  typed_dispatcher.rs
crates/hootenanny/src/domain/: context.rs  messages.rs
crates/hootenanny/src/mcp_extensions/: musical.rs
crates/hootenanny/src/mcp_tools/: local_models.rs  midi_info.rs  mod.rs  musical.rs  rustysynth.rs
crates/hootenanny/tests/: mcp_integration.rs  persistence_integration.rs  schema_validation.rs  test_infra_check.rs
crates/hooteproto/: Cargo.toml  build.rs
crates/hooteproto/examples/: zmq_probe.rs
crates/hooteproto/schemas/: broadcast.capnp  common.capnp  envelope.capnp  garden.capnp  jobs.capnp  responses.capnp  tools.capnp
crates/hooteproto/src/: client.rs  conversion.rs  domain.rs  envelope.rs  frame.rs  garden.rs  garden_listener.rs  garden_peer.rs  garden_snapshot.rs  lazy_pirate.rs  lib.rs  metadata.rs  params.rs  request.rs  responses.rs  schema_helpers.rs  socket_config.rs  timing.rs
crates/hooteproto/tests/: client_concurrency.rs  client_connect.rs  integration.rs  rzmq_roundtrip.rs  zmq_roundtrip.rs
crates/hrcli/: Cargo.toml
crates/hrcli/src/: completion.rs  dynamic_cli.rs  main.rs  mcp_client.rs
crates/hrcli/tests/: cli_generation.rs  dynamic_discovery.rs  execution.rs  server_connection_debug.rs  shell_patterns.rs  sse_stream_test.rs  subprocess_sse_test.rs
crates/llm-mcp-bridge/: Cargo.toml
crates/llm-mcp-bridge/src/: agent_loop.rs  config.rs  handler.rs  lib.rs  manager.rs  mcp_client.rs  provider.rs  session.rs  types.rs
crates/llmchat/: Cargo.toml
crates/llmchat/src/: db.rs  lib.rs  types.rs
crates/luanette/: Cargo.toml
crates/luanette/examples/: hello.lua  midi_process.lua  multi_variation.lua  otel_example.lua  tool_call.lua
crates/luanette/src/: dispatch.rs  error.rs  handler.rs  job_system.rs  lib.rs  main.rs  otel_bridge.rs  runtime.rs  schema.rs  telemetry.rs  tool_bridge.rs  zmq_server.rs
crates/luanette/tests/: integration.rs  tool_refresh.rs
crates/music-understand/: Cargo.toml
crates/music-understand/src/: analyzer.rs  cache.rs  chord_templates.rs  chords.rs  key.rs  lib.rs  meter.rs  types.rs
crates/vibeweaver/: Cargo.toml
crates/vibeweaver/src/: api.rs  async_bridge.rs  broadcast.rs  callbacks.rs  db.rs  kernel.rs  lib.rs  main.rs  scheduler.rs  schema.sql  session.rs  state.rs  tool_bridge.rs  zmq_client.rs  zmq_server.rs
python/: .gitignore  README.md  pyproject.toml
python/hooteproto/: __init__.py  gen.py  protocol.py  tools.py
python/hootpy/: pyproject.toml
python/hootpy/hootpy/: __init__.py  audio.py  cas.py  cli.py  client.py  errors.py  frame.py  headless.py  orpheus_models.py  orpheus_tokenizer.py  protocol.py  service.py  tmidix.py
python/hootpy/tests/: __init__.py  test_headless.py  test_orpheus_tokenizer.py  test_tmidix.py
python/services/anticipatory/: pyproject.toml
python/services/audioldm2/: pyproject.toml
python/services/beatthis/: pyproject.toml
python/services/clap/: pyproject.toml
python/services/demucs/: pyproject.toml
python/services/midi-role-classifier/: pyproject.toml
python/services/musicgen/: pyproject.toml
python/services/orpheus/: pyproject.toml
python/services/rave/: pyproject.toml
python/services/yue/: pyproject.toml
(+409 files in other folders)
