[workspace]
members = [
    "crates/abc",
    "crates/baton",
    "crates/cas",
    "crates/chaosgarden",
    "crates/holler",
    "crates/hooteconf",
    "crates/hootenanny",
    "crates/hooteproto",
    "crates/hrcli",
    "crates/audio-graph-mcp",
    "crates/llmchat",
    "crates/vibeweaver",
]
resolver = "2"

# Override rzmq with fork containing ROUTER pipe coordinator fix
[patch.crates-io]
rzmq = { git = "https://github.com/tobert/rzmq", branch = "fix-router-pipe-coordinator" }
