[workspace]
members = [
    "crates/abc",
    "crates/cas",
    "crates/chaosgarden",
    "crates/holler",
    "crates/hooteconf",
    "crates/hootenanny",
    "crates/hooteproto",
    "crates/audio-graph-mcp",
    "crates/llmchat",
    "crates/midi-analysis",
    "crates/music-understand",
    "crates/vibeweaver",
]
resolver = "2"

[workspace.dependencies]
tmq = "0.5"
zmq = "0.10"
midly = "0.5"
