[package]
name = "audio-graph-mcp"
version = "0.1.0"
edition = "2021"
description = "MCP server providing queryable view of audio/MIDI infrastructure"

[dependencies]
rusqlite = { version = "0.32", features = ["bundled", "serde_json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
uuid = { version = "1", features = ["v4", "serde"] }
tracing = "0.1"
trustfall = "0.8"
alsa = "0.9"
pipewire = "0.9"

[dev-dependencies]
tempfile = "3"
