[package]
name = "baton"
version = "0.1.0"
edition = "2021"
description = "MCP (Model Context Protocol) library for Rust - server and client"
license = "MIT OR Apache-2.0"

[features]
default = []
client = ["reqwest", "bytes"]

[dependencies]
# Web framework
axum = "0.8"
tokio = { version = "1", features = ["sync", "time"] }
tokio-stream = "0.1"
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1.1.0"

# Session management
dashmap = "6"
uuid = { version = "1", features = ["v4"] }

# Async trait support
async-trait = "0.1"

# Telemetry
tracing = "0.1"
tracing-opentelemetry = "0.29"
opentelemetry = "0.28"
opentelemetry-http = "0.28"

# Error handling
thiserror = "2"

# Utilities
tokio-util = { version = "0.7", features = ["rt"] }

# Client (optional)
reqwest = { version = "0.12", features = ["json", "stream"], optional = true }
bytes = { version = "1", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
opentelemetry_sdk = "0.28"
