[package]
name = "cas"
version = "0.1.0"
edition = "2021"
description = "Content Addressable Storage for halfremembered"
license = "MIT"

[dependencies]
blake3 = "1"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
directories = "5"
thiserror = "2"
toml = "0.8"

[dev-dependencies]
tempfile = "3"
