[package]
name = "chaosgarden"
version = "0.1.0"
edition = "2021"
description = "Realtime audio daemon for halfremembered - RT priority playback, graph state, PipeWire I/O"

[dependencies]
# IPC
zeromq = "0.4"
rmp-serde = "1"

# Core
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"

# Graph (future use)
petgraph = "0.6"

# Query (future use)
trustfall = "0.8"

# Async
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"

# Audio (future use)
hound = "3.5"
midly = "0.5"
rustysynth = "1.3"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"

[features]
default = []
pipewire = []

[[bin]]
name = "chaosgarden"
path = "src/bin/chaosgarden.rs"
