[package]
name = "chaosgarden"
version = "0.1.0"
edition = "2021"
description = "Realtime audio daemon for halfremembered - RT priority playback, graph state, PipeWire I/O"

[dependencies]
# IPC
zeromq = "0.4"
rmp-serde = "1"

# Core
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"

# Graph (future use)
petgraph = "0.6"

# Query (future use)
trustfall = "0.8"

# Async
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"

# Audio
hound = "3.5"
midly = "0.5"
rustysynth = { version = "1.3", optional = true }

# Audio decoding (symphonia)
symphonia = { version = "0.5", optional = true }
symphonia-core = { version = "0.5", optional = true }
symphonia-bundle-mp3 = { version = "0.5", optional = true }
symphonia-bundle-flac = { version = "0.5", optional = true }

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"

[features]
default = []
pipewire = []

# Audio file decoding for playback (WAV via hound is always available)
symphonia-decode = [
    "dep:symphonia",
    "dep:symphonia-core",
    "dep:symphonia-bundle-mp3",
    "dep:symphonia-bundle-flac",
]

# RT MIDI synthesis (future)
realtime-synth = ["dep:rustysynth"]

# Full audio support
audio-full = ["symphonia-decode", "realtime-synth"]

[[bin]]
name = "chaosgarden"
path = "src/bin/chaosgarden.rs"
