[package]
name = "holler"
version = "0.1.0"
edition = "2021"
description = "MCP gateway and ZMQ CLI for the Hootenanny system"
license = "MIT"

[[bin]]
name = "holler"
path = "src/main.rs"

[dependencies]
hooteproto = { path = "../hooteproto" }
anyhow = "1.0"
base64 = "0.22"
axum = "0.8"
clap = { version = "4.0", features = ["derive"] }
futures = "0.3"
opentelemetry = { version = "0.28", features = ["trace", "metrics", "logs"] }
opentelemetry_sdk = { version = "0.28", features = ["rt-tokio", "trace", "metrics", "logs"] }
opentelemetry-otlp = { version = "0.28", features = ["grpc-tonic", "trace", "metrics", "logs"] }
opentelemetry-appender-tracing = "0.28"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }
tracing = "0.1"
tracing-opentelemetry = "0.29"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.0", features = ["v4"] }
zeromq = "0.4"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
uuid = { version = "1.0", features = ["v4"] }
