[package]
name = "holler"
version = "0.1.0"
edition = "2021"
description = "MCP gateway and ZMQ CLI for the Hootenanny system"
license = "MIT"

[lib]
name = "holler"
path = "src/lib.rs"

[[bin]]
name = "holler"
path = "src/main.rs"

[dependencies]
rmcp = { version = "0.12", features = ["server", "transport-streamable-http-server", "transport-io"] }
hooteconf = { path = "../hooteconf" }
hooteproto = { path = "../hooteproto" }
capnp = "0.20"
anyhow = "1.0"
base64 = "0.22"
bytes = "1.9"
axum = "0.8"
clap = { version = "4.0", features = ["derive"] }
futures = "0.3"
opentelemetry = { version = "0.28", features = ["trace", "metrics", "logs"] }
opentelemetry_sdk = { version = "0.28", features = ["rt-tokio", "trace", "metrics", "logs"] }
opentelemetry-otlp = { version = "0.28", features = ["grpc-tonic", "trace", "metrics", "logs"] }
opentelemetry-appender-tracing = "0.28"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tokio-util = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }
tracing = "0.1"
tracing-opentelemetry = "0.29"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.0", features = ["v4"] }
# ZMQ - tmq wraps battle-tested libzmq
tmq = { workspace = true }
zmq = { workspace = true }

# TLS support
axum-server = { version = "0.7", features = ["tls-rustls"] }
rcgen = "0.13"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
uuid = { version = "1.0", features = ["v4"] }
