[package]
name = "hootenanny"
version = "0.1.0"
edition = "2021"

[dependencies]
rmcp = { git = "https://github.com/modelcontextprotocol/rust-sdk", features = ["server", "transport-sse-server", "macros"] }
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
axum = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Add path dependency to our new crate
resonode = { path = "../resonode" }
sled = "0.34"
bincode = "1.3"
clap = { version = "4.5.51", features = ["derive"] }

[dev-dependencies]
tempfile = "3.8"

[build-dependencies]
capnpc = "0.23.2"
