[package]
name = "hootenanny"
version = "0.1.0"
edition = "2021"

[dependencies]
rmcp = { git = "https://github.com/modelcontextprotocol/rust-sdk", features = ["server", "transport-sse-server", "macros"] }
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
axum = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# OpenTelemetry for observability
opentelemetry = { version = "0.28", features = ["trace", "metrics", "logs"] }
opentelemetry_sdk = { version = "0.28", features = ["rt-tokio", "trace", "metrics", "logs"] }
opentelemetry-otlp = { version = "0.28", features = ["grpc-tonic", "trace", "metrics", "logs"] }
tracing-opentelemetry = "0.29"
opentelemetry-appender-tracing = "0.28"

# Add path dependency to our new crate
resonode = { path = "../resonode" }
sled = "0.34"
bincode = "1.3"
clap = { version = "4.5.51", features = ["derive"] }
hex = "0.4.3"
blake3 = "1.8.2"
reqwest = { version = "0.12.24", features = ["json"] }
base64 = "0.22.1"
schemars = "1.1.0"
chrono = { version = "0.4.42", features = ["serde"] }

[[example]]
name = "two_agent_jam"
path = "examples/two_agent_jam.rs"

[dev-dependencies]
tempfile = "3.8"

[build-dependencies]
capnpc = "0.23.2"
