[package]
name = "hootenanny"
version = "0.1.0"
edition = "2021"

[dependencies]
baton = { path = "../baton" }
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
tokio-stream = "0.1"
futures = "0.3"
axum = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# OpenTelemetry for observability
opentelemetry = { version = "0.28", features = ["trace", "metrics", "logs"] }
opentelemetry_sdk = { version = "0.28", features = ["rt-tokio", "trace", "metrics", "logs"] }
opentelemetry-otlp = { version = "0.28", features = ["grpc-tonic", "trace", "metrics", "logs"] }
tracing-opentelemetry = "0.29"
opentelemetry-appender-tracing = "0.28"

# Add path dependency to our new crates
abc = { path = "../abc" }
audio-graph-mcp = { path = "../audio-graph-mcp" }
llmchat = { path = "../llmchat" }
llm-mcp-bridge = { path = "../llm-mcp-bridge" }
trustfall = "0.8"
bincode = "1.3"
clap = { version = "4.5.51", features = ["derive"] }
hex = "0.4.3"
blake3 = "1.8.2"
reqwest = { version = "0.12.24", features = ["json", "stream"] }
base64 = "0.22.1"
schemars = "1.1.0"
chrono = { version = "0.4.42", features = ["serde"] }
rustysynth = "1.3.0"
hound = "3.5"
uuid = { version = "1.11", features = ["v4", "serde"] }
dashmap = "6.0"

[dev-dependencies]
bytes = "1"
tempfile = "3.8"
tower = { version = "0.4", features = ["util"] }

[build-dependencies]
capnpc = "0.23.2"
