[package]
name = "hooteproto"
version = "0.1.0"
edition = "2021"
description = "Protocol types for the Hootenanny ZMQ message bus"
license = "MIT"

[dependencies]
anyhow = "1.0"
base64 = "0.22"
bytes = "1.9"
rmp-serde = "1.3"
schemars = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_bytes = "0.11"
thiserror = "2.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
pretty_assertions = "1.4"
