[package]
name = "hooteproto"
version = "0.1.0"
edition = "2021"
description = "Protocol types for the Hootenanny ZMQ message bus"
license = "MIT"

[features]
default = []
client = ["rzmq", "tokio", "tracing"]

[dependencies]
anyhow = "1.0"
base64 = "0.22"
bytes = "1.9"
capnp = "0.20"
schemars = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_bytes = "0.11"
thiserror = "2.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Optional dependencies for client feature
rzmq = { version = "0.5", features = ["ipc"], optional = true }
tokio = { version = "1", features = ["sync", "time", "rt"], optional = true }
tracing = { version = "0.1", optional = true }

[build-dependencies]
capnpc = "0.20"

[dev-dependencies]
pretty_assertions = "1.4"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }

[[test]]
name = "client_connect"
required-features = ["client"]
