[package]
name = "hooteproto"
version = "0.1.0"
edition = "2021"
description = "Protocol types for the Hootenanny ZMQ message bus"
license = "MIT"

[features]
default = ["peer"]
peer = ["tmq", "zmq", "tokio", "tracing", "async-trait", "hooteconf", "futures", "async-stream"]

[dependencies]
anyhow = "1.0"
base64 = "0.22"
bytes = "1.9"
capnp = "0.20"
schemars = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_bytes = "0.11"
thiserror = "2.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Optional dependencies for peer feature
async-stream = { version = "0.3", optional = true }
async-trait = { version = "0.1", optional = true }
futures = { version = "0.3", optional = true }
hooteconf = { path = "../hooteconf", optional = true }
tmq = { workspace = true, optional = true }
zmq = { workspace = true, optional = true }
tokio = { version = "1", features = ["sync", "time", "rt", "macros"], optional = true }
tracing = { version = "0.1", optional = true }

[build-dependencies]
capnpc = "0.20"

[dev-dependencies]
futures = "0.3"
pretty_assertions = "1.4"
tmq = { workspace = true }
zmq = { workspace = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }

[[test]]
name = "client_concurrency"
required-features = ["peer"]

[[test]]
name = "integration"
required-features = ["peer"]
