[package]
name = "hrcli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "hrcli"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
owo-colors = "4"
futures = "0.3"
tokio-stream = "0.1"
