[package]
name = "hrcli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "hrcli"
path = "src/main.rs"

[dependencies]
bytes = "1"
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
owo-colors = "4"
futures = "0.3"
tokio-stream = "0.1"
dirs = "5"
sha2 = "0.10"
regex = "1"
dialoguer = "0.11"
handlebars = "6"
prettytable-rs = "0.10"
chrono = "0.4"
rustyline = "14"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
wiremock = "0.6"
insta = { version = "1", features = ["json", "redactions"] }
tokio-test = "0.4"
serial_test = "3"
hootenanny = { path = "../hootenanny" }
baton = { path = "../baton" }
audio-graph-mcp = { path = "../audio-graph-mcp" }
tokio-util = "0.7"
axum = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
