[package]
name = "luanette"
version = "0.1.0"
edition = "2021"
description = "Lua scripting ZMQ server for the Hootenanny system"
authors = ["Al Tobey <tobert@gmail.com>"]
license = "MIT"

[lib]
name = "luanette"
path = "src/lib.rs"

[[bin]]
name = "luanette"
path = "src/main.rs"

[dependencies]
# Hootenanny Protocol
hooteproto = { path = "../hooteproto" }

# MCP Framework (kept for now during transition)
baton = { path = "../baton", features = ["client"] }

# Lua Runtime
mlua = { version = "0.10", features = ["lua54", "async", "send", "serialize"] }

# Async Runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# ZMQ
zeromq = "0.4"

# Web Server (kept for now during transition)
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"

# Error Handling
anyhow = "1"
thiserror = "1"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-opentelemetry = "0.29"
opentelemetry = "0.28"
opentelemetry_sdk = { version = "0.28", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.28", features = ["grpc-tonic", "trace", "logs", "metrics"] }
opentelemetry-appender-tracing = "0.28"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
tokio-util = "0.7"
base64 = "0.22"

# MIDI Processing
midly = "0.5"

# Temp Files
tempfile = "3"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
