[package]
name = "music-understand"
version = "0.1.0"
edition = "2021"
description = "Unified music understanding: key, meter, chords, voices"

[dependencies]
midi-analysis = { path = "../midi-analysis" }
cas = { path = "../cas" }
midly = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
thiserror = "2"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"

[dev-dependencies]
pretty_assertions = "1"
tempfile = "3"
