[package]
name = "vibeweaver"
version = "0.1.0"
edition = "2021"
description = "Python-embedded Rust process for AI music agents"
authors = ["Al Tobey <tobert@gmail.com>"]
license = "MIT"

[lib]
name = "vibeweaver"
path = "src/lib.rs"

[[bin]]
name = "vibeweaver"
path = "src/main.rs"

[dependencies]
# Hootenanny Protocol
hooteproto = { path = "../hooteproto" }

# Python Embedding
# Note: extension-module is for building Python extensions (shared libs), not for embedding Python
pyo3 = { version = "0.23", features = ["auto-initialize"] }
pyo3-async-runtimes = { version = "0.23", features = ["tokio-runtime"] }

# Async Runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# ZMQ
zeromq = "0.4"
bytes = "1"
capnp = "0.20"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"

# Error Handling
anyhow = "1"
thiserror = "1"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
tempfile = "3"
