[project]
name = "hootpy"
version = "0.1.0"
description = "HOOT01 protocol library for Python model services"
requires-python = ">=3.12"
dependencies = [
    "pyzmq>=26.0",
    "pycapnp>=2.0",
    "numpy>=1.26",
    "blake3>=0.4",
    "httpx>=0.27",
    "opentelemetry-api>=1.20",
    "opentelemetry-sdk>=1.20",
    "opentelemetry-exporter-otlp>=1.20",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["hootpy"]
