[project]
name = "beatthis-service"
version = "0.1.0"
description = "Beat-this beat/downbeat detection service for hootenanny"
requires-python = ">=3.12"
dependencies = [
    # torch provided by system (python-pytorch-rocm or python-pytorch-cuda)
    "hootpy",
    "numpy>=1.26",
    "beat_this @ git+https://github.com/CPJKU/beat_this.git",
]

[tool.uv]
package = false

[tool.uv.sources]
hootpy = { workspace = true }
