[project]
name = "clap-service"
version = "0.1.0"
description = "CLAP audio analysis service for hootenanny"
requires-python = ">=3.12"
dependencies = [
    # torch provided by system (python-pytorch-rocm or python-pytorch-cuda)
    "hootpy",
    "numpy>=1.26",
    "transformers>=4.40",
]

[tool.uv]
package = false

[tool.uv.sources]
hootpy = { workspace = true }
