[project]
name = "demucs-service"
version = "0.1.0"
description = "Demucs audio source separation service for hootenanny"
requires-python = ">=3.12"
dependencies = [
    # torch/torchaudio provided by system (python-pytorch-rocm or python-pytorch-cuda)
    "hootpy",
    "numpy>=1.26",
    "demucs",
    "dora-search",
    "einops",
    "julius>=0.2.3",
    "openunmix",
]

[tool.uv]
package = false

[tool.uv.sources]
hootpy = { workspace = true }
