[project]
name = "midi-role-classifier-service"
version = "0.1.0"
description = "MIDI voice role classification service for hootenanny"
requires-python = ">=3.12"
dependencies = [
    "hootpy",
    "numpy>=1.26",
    "scikit-learn>=1.4",
    "joblib>=1.3",
]

[tool.uv]
package = false

[tool.uv.sources]
hootpy = { workspace = true }
