[project]
name = "orpheus-service"
version = "0.1.0"
description = "Orpheus MIDI generation service for hootenanny"
requires-python = ">=3.12"
dependencies = [
    "hootpy[orpheus]",
    "torch>=2.0",
    "numpy>=1.26",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["orpheus"]

[tool.uv.sources]
hootpy = { workspace = true }

# Note: For AMD ROCm support, install torch separately:
#   pip install torch --index-url https://download.pytorch.org/whl/rocm6.2
# Or for CUDA:
#   pip install torch --index-url https://download.pytorch.org/whl/cu124
