[project]
name = "rave-service"
version = "0.1.0"
description = "RAVE audio encoder/decoder service for hootenanny"
requires-python = ">=3.12"
dependencies = [
    "hootpy",
    "torch>=2.0",
    "torchaudio>=2.0",
    "numpy>=1.26",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["rave"]

# PyTorch with ROCm support (AMD GPUs)
[[tool.uv.index]]
name = "pytorch-rocm"
url = "https://download.pytorch.org/whl/nightly/rocm7.1"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-rocm" }
torchaudio = { index = "pytorch-rocm" }
