[project]
name = "rave-service"
version = "0.1.0"
description = "RAVE audio encoder/decoder service for hootenanny"
requires-python = ">=3.12"
dependencies = [
    "hootpy",
    "torch>=2.0",
    "torchaudio>=2.0",
    "numpy>=1.26",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["rave"]

[tool.uv.sources]
hootpy = { workspace = true }

# Note: For AMD ROCm support, install torch separately:
#   pip install torch torchaudio --index-url https://download.pytorch.org/whl/rocm6.2
# Or for CUDA:
#   pip install torch torchaudio --index-url https://download.pytorch.org/whl/cu124
