[project]
name = "rave-service"
version = "0.1.0"
description = "RAVE audio encoder/decoder service for hootenanny"
requires-python = ">=3.12"
dependencies = [
    # torch/torchaudio provided by system (python-pytorch-rocm or python-pytorch-cuda)
    "hootpy",
    "numpy>=1.26",
]

[tool.uv]
package = false

[tool.uv.sources]
hootpy = { workspace = true }
