[project]
name = "yue-service"
version = "0.1.0"
description = "YuE text-to-song generation service for hootenanny"
requires-python = ">=3.12"
dependencies = [
    # torch provided by system (python-pytorch-rocm or python-pytorch-cuda)
    "hootpy",
    "numpy>=1.26",
    "soundfile>=0.12",
    "yue-inference",
]

[tool.uv]
package = false

[tool.uv.sources]
hootpy = { workspace = true }
